@@ -383,7 +383,7 @@ $lang['error_passwordrequired'] = "A <b>password</b> is required for SMTP authen
 $lang['error_portinvalid'] = "Port number is invalid";
 $lang['error_retrieving_file_list'] = "Error retrieving file list";
 //$lang['error_setusersettings_self'] = "Cannot set the template user to this account";
-$lang['error_timedifference'] = "File system time is different than server time. This may cause problems when publishing i.e. news articles.";
+$lang['error_timedifference2'] = "A discrepency in time with the PHP environment was detected. This may cause problems when publishing i.e. news articles.";
 $lang['error_timeoutinvalid'] = "The time-out specified is invalid (must be between 1 and 3600 seconds)";
 $lang['error_type'] = "Error Type";
 $lang['error_udt_name_chars'] = "A valid UDT name starts with a letter or underscore, followed by any number of letters, numbers, or underscores.";
@@ -1172,7 +1172,7 @@ $lang['msg_userdeleted'] = 'Selected user account successfully deleted.';
 //$lang['msg_defaultmetadata'] = "Add code here that should appear in the metadata section of all new pages";
 $lang['msg_grantall_found'] = "Found a &quot;GRANT ALL&quot; statement that appears to be suitable";
 $lang['msg_mailprefs_set'] = "Email settings saved";
-$lang['msg_notimedifference'] = "No file system time difference found";
+$lang['msg_notimedifference2'] = "No time difference found";
 $lang['msg_permstab'] = "Authorized administrators, or page owners can adjust the ownership and additional editors of a content page";
 $lang['msg_settemplateuser'] = "Template user account set";
 $lang['msg_usersdeleted'] = "%d users were deleted";
